# hash-resolver

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cli/: main.py
hash_resolver/: core.py  emulator.py  loader.py  pattern.py  utils.py
hash_resolver/execution/: base.py  emulated.py  runtime.py  runtime_launcher.py
ida_plugin/: README.md  plugin.py  ui_form.py
ida_plugin/signatures/: README.md  cdecl_hash32.json  cdecl_hash32_memout.json  cdecl_hash32_seed.json  hash64.json  hash64_memout.json  template.json
ida_plugin/symbols/: kernel32.txt
scripts/: extract_exports.py
tests/: test_cli.py
